--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Metrio LITE is a web application for filling out forms and generating environmental indicators. With features to visualize, create, edit, and delete forms, view and manage data entries, and ensure responsiveness across devices, Metrio LITE offers a user-friendly interface for efficient environmental data management."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Metrio LITE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
